[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "m4rkw-pushover"
version = "VERSION"
description = "pushover"
authors = [{ name = "Your Name", email = "your@email.com" }]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "requests",
    "types-requests",
]

[tool.setuptools]
packages = ["pushover"]
